# tankoid

./: README.md  requirements.txt  tankoid.py
cpp/: CMakeLists.txt
cpp/src/: config.hpp.in  main.cpp
python/: tankoid.py
resources/levels/: 0000.lvl
